add admin router and auth_util.py
