# openapi.yaml
@@ -11,8 +11,10 @@ paths:
       tags:
       - question answering
       summary: Answer Question
-      description: ask questions related to the knowledge base, return the answer
-        if there is a good match, otherwise turn to chatgpt for answer
+      description: ask questions related to golf, return a standard answer if there
+        is a good match in the knowledge base, otherwise turn to chatgpt for an answer.
+        if the question is not related to golf at all, return a default answer telling
+        the user to ask another question
       operationId: answer_question_api_v1_qa_query_post
       requestBody:
         content:
@@ -54,6 +56,8 @@ paths:
       summary: Delete Doc
       description: delete a document by doc_id. only for testing
       operationId: delete_doc_api_v1_admin_documents__doc_id__delete
+      security:
+      - HTTPBasic: []
       parameters:
       - name: doc_id
         in: path
@@ -82,6 +86,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DeleteDocumentResponse'
+      security:
+      - HTTPBasic: []
 components:
   schemas:
     Answer:
@@ -302,3 +308,7 @@ components:
       - msg
       - type
       title: ValidationError
+  securitySchemes:
+    HTTPBasic:
+      type: http
+      scheme: basic
